# vector-dev-kube-manager

./: Cargo.toml  Dockerfile
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js
frontend/src/lib/: pods.ts  types.ts
frontend/src/lib/ChangeConfig/: Form.svelte  Input.svelte  Label.svelte  Option.svelte
frontend/src/lib/EverVault/: EvervaultCard.svelte
frontend/src/routes/: +page.svelte
src/: kube_agent.rs  main.rs
