[package]
name = "vector-dev-kube-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4" }
anyhow = "1.0.81"
futures = "0.3.30"
k8s-openapi = { version = "0.21.1", features = ["v1_29"] }
kube = { version = "0.88.1", features = ["client", "runtime", "ws"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.5.2", features = ["fs"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
serde_json = "1.0.114"
serde = "1.0.197"
